--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -64,17 +64,11 @@ EntityWeb -> User: log the user into the app
 ----
 actor User
 entity EntityWeb as "WebApp"
-entity EntityRest as "RestAPI"
 database Pod as "USER_POD"
-database Mongo as "Database"
 
 User -> EntityWeb: select the data to load on map
-EntityWeb -> EntityRest: send data and parameters
-EntityRest -> Pod: get locations
-EntityRest -> Mongo: get locations
-Pod --> EntityRest: send data back
-Mongo --> EntityRest: send data back
-EntityRest -> EntityWeb: load data to map
+EntityWeb -> Pod: get locations
+Pod --> EntityWeb: send data back
 EntityWeb -> User: show map
 ----
 
@@ -84,14 +78,11 @@ EntityWeb -> User: show map
 ----
 actor User
 entity EntityWeb as "WebApp"
-entity EntityRest as "RestAPI"
 database Pod as "USER_POD"
 
 User -> EntityWeb: select friend list option (has to be logged)
-EntityWeb -> EntityRest: ask for data
-EntityRest -> Pod: get friends data
-Pod --> EntityRest: send data back
-EntityRest -> EntityWeb: load data to app
+EntityWeb -> Pod: get friends data
+Pod --> EntityWeb: send data back
 EntityWeb -> User: show friends list
 ----
 
@@ -100,15 +91,11 @@ EntityWeb -> User: show friends list
 ----
 actor User
 entity EntityWeb as "WebApp"
-entity EntityRest as "RestAPI"
 database Pod as "USER_POD"
-database Mongo as "Database"
 
 User -> EntityWeb: select a place on the map (has to be logged)
-EntityWeb -> EntityRest: send petition
-EntityRest -> Pod: add place to pod
-EntityRest -> Mongo: add place to db
-EntityRest -> EntityWeb: notify success
+EntityWeb -> Pod: add place to pod
+Pod -> EntityWeb: notify success
 EntityWeb -> User: show new point on map
 ----
 
@@ -118,13 +105,11 @@ EntityWeb -> User: show new point on map
 ----
 actor User
 entity EntityWeb as "WebApp"
-entity EntityRest as "RestAPI"
 database Pod as "USER_POD"
 
 User -> EntityWeb: select a place on the map to review (has to be logged)
-EntityWeb -> EntityRest: send review petition
-EntityRest -> Pod: add review to place on user pod
-EntityRest -> EntityWeb: notify success
+EntityWeb -> Pod: add review to place on user pod
+Pod -> EntityWeb: notify success
 EntityWeb -> User: show review on map
 ----
 
@@ -133,17 +118,11 @@ EntityWeb -> User: show review on map
 ----
 actor User
 entity EntityWeb as "WebApp"
-entity EntityRest as "RestAPI"
 database Pod as "USER_POD"
-database Mongo as "Database"
 
 User -> EntityWeb: select a cattegory (has to be logged)
-EntityWeb -> EntityRest: send petition
-EntityRest -> Pod: ask for the places from the specified cattegory
-EntityRest -> Mongo: ask for the places from the specified cattegory
-Pod --> EntityRest: receive data
-Mongo --> EntityRest: receive data
-EntityRest -> EntityWeb: send data to frontend
+EntityWeb -> Pod: ask for the places from the specified cattegory
+Pod --> EntityWeb: receive data
 EntityWeb -> User: show places for specified cattegory on map
 ----
 
