--- a/docs/08_concepts.adoc
+++ b/docs/08_concepts.adoc
@@ -56,12 +56,10 @@ image:08-Crosscutting-Concepts-Structure-EN.png["Possible topics for crosscuttin
 |*Name*|*Description*
 |POD| User information.
 |User| User who uses the application. Can be friend with other users.
-|Professional User| Special user who runs the POD for an actual place as: bar, shop, bar... 
-|Post| A comment, score... made by a user related to a place.
-|Places| A location in the map that is static over time.
-|Professional Places| A location in the map that is run by a user.
-|Monuments| A type of static place.
-|Restaurant| A type of place run by a user.
+|Comment| A comment made by a user related to a place.
+|Score| A score submitted by a user related to a place.
+|Photo| A photo upload by a user related to a place.
+|Place| A location in the map that is static over time.
 |=======================
 
 image::modeloDominio.png[]
