--- a/docs/12_glossary.adoc
+++ b/docs/12_glossary.adoc
@@ -37,4 +37,5 @@ Potentially more columns in case you need translations.
 |	POD	|	Pods are like secure personal web servers for data. When data is stored in someone's Pod, they control which people and applications can access it.
 |	SOLID	|	SOLID is an acronym for the first five object-oriented design principleS. These principles establish practices that lend to developing software with considerations for maintaining and extending as the project grows.
 |   Bootstrap   |  A multiplatform library, open source toolbox to design web applications.
+|   Netlify   |  A remote cloud computing company that offers a development platform that provides: serverless backend services, build and deployment functionality for dynamic websites and web applications.
 |===
