--- a/docs/02_architecture_constraints.adoc
+++ b/docs/02_architecture_constraints.adoc
@@ -22,8 +22,8 @@ conventions (e.g. programming or versioning guidelines, documentation or naming 
 |=======================
 |Name|Description
 |React| We will use React framework to develop the frontend of the application.
-|JavaScript| It will be used on the frontend but also on the backend to work with SOLID pods and NodeJS.
-|NodeJS| Node.js is designed to build network applications and it will be used as the backend of our application. It is based on JavaScript and it is event-driven.
+|JavaScript| It will be used on the frontend to work with SOLID pods and NodeJS.
+|Bootstrap| We will use Bootstrap to develop a responsive interface.
 |SOLID| We will use SOLID to store users information using PODs, giving this data more privacy. This is a requirement.
 |GitHub| We will use GitHub to update the changes of the source code.
 |Docker + Amazon AWS| We will deploy our application using Amazon AWS to create a virtual machine and use docker to create the images and then deploy the application with GitHub Actions.
