--- a/docs/05_building_block_view.adoc
+++ b/docs/05_building_block_view.adoc
@@ -56,7 +56,7 @@ Since there are so many ways to specify interfaces why do not provide a specific
 In the best case you will get away with examples or simple signatures.
 
 ****
-Here, the app is represented as a whitebox. Inside of it we can see the three layers of MVC (Model View Controller) convention in black boxes:
+Here, the app is represented as a whitebox. Inside of it we can see components based architecture convention in black boxes:
 
 
 [role="arc42help"]
