--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -28,8 +28,6 @@ We have chosen to use the next technologies on the app:
 
 * **SOLID**: is an acronym that refers to five good and essential principles for the design of a software architecture (**S**ingle Responsibility, **O**pen/Closed, **L**iskov Substitution, **I**nterface Segregation and **D**ependency Inversion). With this principles the user knows that all his "sensitive data" is safe and decentralized. We use it because it is required on the project.
 
-* **Node js**: is a Javascript execution environment controlled by events, what makes it light and efficient. It is also a nice option for reactive web apps because it's able to provide a big amount of simultaneous conections with high performance (big scalability). 
-
 * *Javascript*: is an interpreted programming language based on prototypes, imperative and dynamic. We will use it on both frontend and backend.
 
 * **CSS**: is a graphic programming language oriented to define the repesentation of a document. We will use it as part of the frontend of the app.
@@ -43,7 +41,7 @@ We have chosen to use the next technologies on the app:
 * **Bootstrap**: is a framework that provides a collection of tools to simplify the use of html and css in the application.
 
 === Why this technologies?
-* React, CSS, Javascript and NodeJS were chosen to reach a good level of usability and accesibility.
+* React, CSS and Javascript were chosen to reach a good level of usability and accesibility.
 * Github was chosen for version control and organization and communication between the team.
 * Bootstrap was chosen because the facilities it provides and to have a nice, clean and responsive view to the web app.
 * Netlify was chosen because of its deployment, which it's very easy and it automaticaly builds when updating the app. 
