--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -92,5 +92,10 @@ include::11_technical_risks.adoc[]
 include::12_glossary.adoc[]
 
 <<<<
+// 13. Test
+include::13_test.adoc[]
+
+
+<<<<
 // About
 include::about-arc42.adoc[]
